# msa

./: README.md  main.py  pyproject.toml
src/msa/: __init__.py  msa.py
src/msa/data/: sequences.fasta
