[project]
name = "msa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koh", email = "kohbanye@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "biopython>=1.83",
    "tqdm>=4.66.4",
    "types-tqdm>=4.66.0.20240417",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
